<resources>
    <string name="app_name">Classy Treasurer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="classy_inc">Classy Inc.</string>
    <string name="any_amount_would_be_appreciated">Any amount would be Appreciated!</string>
    <string name="enter_amount_to_invest">Enter Amount to Invest</string>
    <string name="invest_now">Invest Now</string>
    <string name="your_payment_details">Your Payment Details</string>
    <string name="payment_id">PAYMENT ID:</string>
    <string name="amount">AMOUNT:</string>
    <string name="status">STATUS:</string>
    <string name="go_to_home">GO TO HOME</string>


    <string name="request_a_feature">Request a Feature</string>
    <string name="describe_the_feature_you_need_report_bugs">Describe the feature you need /Report Bugs</string>
    <string name="request_feature">Request Feature</string>
    <string name="reset_pass">Reset Pass</string>

    <string name="send_link">Send link</string>
    <string name="loGin">Login</string>

    <string name="your_financial_tip">Your Financial Tip!</string>
    <string name="loading_please_wait">Loading...!please wait...</string>
    <string name="go_back_to_home">GO Back To Home</string>
    <string name="add_your_expense_details">Add Your Expense Details</string>

    <string name="spent_for">Spent for:</string>
    <string name="note">NOTE:</string>
    <string name="save">Save</string>
    <string name="add_your_income_details">Add Your Income Details</string>

    <string name="got_from">GOT FROM:</string>

    <string name="type">Type</string>
    <string name="_19_nov_2019">19 Nov 2019</string>


    <string name="_6_june_2018">6 june 2018</string>
    <string name="_4_05_pm">4:05 PM</string>

    <string name="your_total_expense">Your Total Expense:</string>
    <string name="search_here">Search here...</string>
    <string name="your_total_income">Your Total Income:</string>




    <string name="headline">headline</string>
    <string name="advertiser">advertiser</string>

    <string name="krishnansaihari_gmail_com">krishnansaihari@gmail.com</string>
    <string name="update_your_income_info">Update Your Income Info</string>

    <string name="update_your_expense_info">Update Your Expense Info</string>

    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>

    <string name="log_out">Log Out</string>

    <string name="contact_developer">Contact developer</string>
    <string name="be_an_investor">Be an Investor</string>
    <string name="get_financial_tip_as_reward">Get Financial Tip as Reward</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="dashboard">DashBoard</string>


</resources>
