<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_pass"
            android:textColor="#2CA7E0"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/sendemail_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="#2CA7E0"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_contact_mail"
            android:drawablePadding="10dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/edit"
            android:padding="20dp"
            android:elevation="10dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/send_link"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:id="@+id/Resetbtn_id"
            android:background="@drawable/button"
            android:elevation="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loGin"
            android:textColor="#2CA7E0"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:elevation="5dp"
            android:id="@+id/txt_loglayout_id"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/classy_inc"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2CA7E0"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>