<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/any_amount_would_be_appreciated"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/date_color"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_pay_id"
            android:background="@drawable/search_layout"
            android:hint="@string/enter_amount_to_invest"
            android:inputType="number"
            android:padding="7dp"
            android:maxLength="7"/>

        <Button
            android:id="@+id/btn_pay_id"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button"
            android:padding="3dp"
            android:text="@string/invest_now"
            android:textColor="@android:color/white" />

    </LinearLayout>


</RelativeLayout>