<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.RegistrationActivity"
    android:background="@drawable/background_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#2CA7E0"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:fontFamily="@font/ubuntu_bold"/>

        <EditText
            android:id="@+id/email_reg_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="#2CA7E0"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/edit"
            android:padding="15dp"
            android:elevation="10dp"
            android:fontFamily="@font/ubuntu_regular"/>


        <EditText
            android:id="@+id/pass_reg_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="#2CA7E0"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit"
            android:padding="15dp"
            android:elevation="10dp"
            android:fontFamily="@font/ubuntu_regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:id="@+id/txt_signinlayout_id"
            android:textColor="#2CA7E0"
            android:fontFamily="@font/ubuntu_regular"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:layout_marginRight="35dp"
            />

        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:id="@+id/btn_reg_id"
            android:elevation="10dp"
            android:fontFamily="@font/ubuntu_bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/classy_inc"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2CA7E0"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_bold"/>


    </LinearLayout>

</LinearLayout>