<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RewardActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_financial_tip"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="@drawable/rewarddesign"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/date_color"
                android:textAppearance="?android:textAppearanceLarge"

                android:textStyle="italic"
                android:text="@string/loading_please_wait"
                android:gravity="center"
                android:textAlignment="center"
                android:id="@+id/txt_reward_id"
                />

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textdesign"
                android:text="@string/go_back_to_home"
                android:textColor="@android:color/white"
                android:id="@+id/btn_reward_id"/>





        </LinearLayout>


    </LinearLayout>





</LinearLayout>