<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/backdesign"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/update_your_income_info"
                android:fontFamily="@font/ubuntu_bold"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:fontFamily="@font/ubuntu_regular"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/edt_amount_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="6"
                        android:fontFamily="@font/ubuntu_medium"/>


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/got_from"
                        android:fontFamily="@font/ubuntu_regular"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/edt_type_id"
                        android:fontFamily="@font/ubuntu_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="18" />


                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note"
                        android:fontFamily="@font/ubuntu_regular"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/edt_note_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="50"
                        android:fontFamily="@font/ubuntu_medium"/>


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_DELETE_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btndesign"
                        android:text="@string/delete"
                        android:fontFamily="@font/ubuntu_bold"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_UPDATE_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textdesign"
                        android:text="@string/update"
                        android:fontFamily="@font/ubuntu_bold"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white" />

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>