<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/request_a_feature"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:background="@drawable/backdesign"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">


                     <RelativeLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:layout_margin="10dp">


                        <EditText
                            android:id="@+id/edt_reqFeature_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/describe_the_feature_you_need_report_bugs"
                            android:maxLength="200"/>

                     </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:layout_weight="2">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/request_feature"
                            android:id="@+id/btn_reqFeature_id"
                            android:background="@drawable/textdesign"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@android:color/white"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>


</LinearLayout>