<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/date_txt_income_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/_6_june_2018"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/date_color"
                android:textStyle="bold"
                android:fontFamily="@font/ubuntu_medium"/>

            <TextView
                android:id="@+id/time_txt_income_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_txt_income_id"
                android:text="@string/_4_05_pm"
                android:fontFamily="@font/ubuntu_regular"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/type_txt_income_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/type"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:fontFamily="@font/ubuntu_bold"/>

            <TextView
                android:id="@+id/note_txt_income_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/type_txt_income_id"
                android:maxLines="1"
                android:text="Note"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:fontFamily="@font/ubuntu_regular"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/amoount_txt_income_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$ 15,000"
                android:fontFamily="@font/ubuntu_bold"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold" />


        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>